@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_listener_data.c,v 1.39 2006-10-30 00:55:50 chu11 Exp $
+ *  $Id: cerebrod_listener_data.c,v 1.40 2006-10-30 20:00:24 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -53,13 +53,14 @@
 #include "monitor_module.h"
 #include "wrappers.h"
 
-#define LISTENER_DATA_INDEX_SIZE_DEFAULT      1024
-#define LISTENER_DATA_INDEX_SIZE_INCREMENT    1024
-#define LISTENER_DATA_INDEX_SIZE_LIMIT        (listener_data_index_size*2)
+#define LISTENER_DATA_SIZE_DEFAULT              1024
+#define LISTENER_DATA_SIZE_INCREMENT            1024
 
-#define LISTENER_DATA_METRIC_NAMES_INDEX_SIZE 32
+#define LISTENER_DATA_METRIC_NAMES_SIZE_DEFAULT 32
+#define LISTENER_DATA_METRIC_NAMES_INCREMENT    32
 
-#define LISTENER_DATA_METRIC_DATA_SIZE        32
+#define LISTENER_DATA_METRIC_DATA_SIZE_DEFAULT  32
+#define LISTENER_DATA_METRIC_DATA_INCREMENT     32
 
 extern struct cerebrod_config conf;
 #if CEREBRO_DEBUG
@@ -77,24 +78,16 @@ extern clusterlist_module_t clusterlist_handle;
 int listener_data_init = 0;
 pthread_mutex_t listener_data_init_lock = PTHREAD_MUTEX_INITIALIZER;
 
-/* 
- * listener_data_list
- *
- * contains list of nodes and cluster_data
- */
-List listener_data_list = NULL;
-
 /*
- * listener_data_index
- * listener_data_index_numnodes
- * listener_data_index_size
+ * listener_data
+ * listener_data_numnodes
+ * listener_data_size
  *
- * hash index into cerebrod_listener_data list for faster access, number of
- * currently indexed entries, and index size
+ * hash of listener data, number of entries, and index size
  */
-hash_t listener_data_index = NULL;
-int listener_data_index_numnodes;
-int listener_data_index_size;
+hash_t listener_data = NULL;
+int listener_data_numnodes;
+int listener_data_size;
 
 /*  
  * listener_data_lock
@@ -105,13 +98,14 @@ int listener_data_index_size;
 pthread_mutex_t listener_data_lock = PTHREAD_MUTEX_INITIALIZER;
 
 /* 
- * metric_names_index
- * metric_names_index_size
+ * metric_names
+ * metric_names_size
  *
  * contains list of currently known metrics
  */
-hash_t metric_names_index = NULL;
-int metric_names_index_size;
+hash_t metric_names = NULL;
+int metric_names_size;
+int metric_names_count;
 
 /* 
  * metric_name_defaults
@@ -154,22 +148,6 @@ monitor_modules_t monitor_handle = NULL;
  */
 hash_t monitor_index = NULL;
 int monitor_index_size = 0;
-
-/* 
- * _cerebrod_node_data_strcmp
- *
- * callback function for list_sort to sort node names
- */
-static int 
-_cerebrod_node_data_strcmp(void *x, void *y)
-{
-  struct cerebrod_node_data *a = x;
-  struct cerebrod_node_data *b = y;
-  
-  assert(x && y);
-
-  return strcmp(a->nodename, b->nodename);
-}
 
 struct cerebrod_metric_data *
 metric_data_create(const char *metric_name)
@@ -216,12 +194,18 @@ _cerebrod_node_data_create_and_init(const char *nodename)
   nd->last_received_time = 0;
   Pthread_mutex_init(&(nd->node_data_lock), NULL);
   if (conf.metric_server)
-    nd->metric_data = Hash_create(LISTENER_DATA_METRIC_DATA_SIZE, 
-                                  (hash_key_f)hash_key_string,
-                                  (hash_cmp_f)strcmp, 
-                                  (hash_del_f)metric_data_destroy);
+    {
+      nd->metric_data = Hash_create(LISTENER_DATA_METRIC_DATA_SIZE_DEFAULT, 
+                                    (hash_key_f)hash_key_string,
+                                    (hash_cmp_f)strcmp, 
+                                    (hash_del_f)metric_data_destroy);
+      nd->metric_data_size = LISTENER_DATA_METRIC_DATA_SIZE_DEFAULT;
+    }
   else
-    nd->metric_data = NULL;
+    {
+      nd->metric_data = NULL;
+      nd->metric_data_size = 0;
+    }
   nd->metric_data_count = 0;
   return nd;
 }
@@ -289,8 +273,6 @@ _setup_monitor_modules(void)
                               (hash_key_f)hash_key_string, 
                               (hash_cmp_f)strcmp, 
                               (hash_del_f)list_destroy);
-
-  
 
   for (i = 0; i < monitor_module_count; i++)
     {
@@ -445,20 +427,19 @@ cerebrod_listener_data_initialize(void)
 
   if (numnodes > 0)
     {
-      listener_data_index_numnodes = numnodes;
-      listener_data_index_size = numnodes;
+      listener_data_numnodes = numnodes;
+      listener_data_size = numnodes;
     }
   else
     {
-      listener_data_index_numnodes = 0;
-      listener_data_index_size = LISTENER_DATA_INDEX_SIZE_DEFAULT;
+      listener_data_numnodes = 0;
+      listener_data_size = LISTENER_DATA_SIZE_DEFAULT;
     }
 
-  listener_data_list = List_create((ListDelF)NULL);
-  listener_data_index = Hash_create(listener_data_index_size,
-                                    (hash_key_f)hash_key_string,
-                                    (hash_cmp_f)strcmp,
-                                    (hash_del_f)NULL);
+  listener_data = Hash_create(listener_data_size,
+                              (hash_key_f)hash_key_string,
+                              (hash_cmp_f)strcmp,
+                              (hash_del_f)NULL);
   
   /* If the clusterlist module contains nodes, retrieve all of these
    * nodes and put them into the cerebrod_listener_data list.  All updates
@@ -478,27 +459,25 @@ cerebrod_listener_data_initialize(void)
           
           nd = _cerebrod_node_data_create_and_init(nodes[i]);
 
-          List_append(listener_data_list, nd);
-          Hash_insert(listener_data_index, nd->nodename, nd);
+          Hash_insert(listener_data, nd->nodename, nd);
 
           free(nodes[i]);
         }
-
-      List_sort(listener_data_list, (ListCmpF)_cerebrod_node_data_strcmp);
 
       free(nodes);
     }
 
   if (conf.metric_server)
     {
-      int i, size;
+      int i;
       
-      size = metric_name_defaults_count + LISTENER_DATA_METRIC_NAMES_INDEX_SIZE;
-      metric_names_index = Hash_create(size, 
-                                       (hash_key_f)hash_key_string, 
-                                       (hash_cmp_f)strcmp, 
-                                       (hash_del_f)metric_name_data_destroy);
+      metric_names_size = metric_name_defaults_count + LISTENER_DATA_METRIC_NAMES_SIZE_DEFAULT;
+      metric_names = Hash_create(metric_names_size, 
+                                 (hash_key_f)hash_key_string, 
+                                 (hash_cmp_f)strcmp, 
+                                 (hash_del_f)metric_name_data_destroy);
 
+      metric_names_count = 0;
       for (i = 0; i < metric_name_defaults_count; i++)
         {
           struct cerebrod_metric_name_data *mnd;
@@ -506,7 +485,8 @@ cerebrod_listener_data_initialize(void)
           mnd = metric_name_data_create(metric_name_defaults[i],
                                         CEREBROD_METRIC_LISTENER_ORIGIN_DEFAULT);
 
-          Hash_insert(metric_names_index, mnd->metric_name, mnd);
+          Hash_insert(metric_names, mnd->metric_name, mnd);
+          metric_names_count++;
         }
     }
 
@@ -623,7 +603,7 @@ _metric_data_dump(void *data, const void *key, void *arg)
  * callback function from list_for_each to dump node data
  */
 static int
-_node_data_dump(void *x, void *arg)
+_node_data_dump(void *x, void *key, void *arg)
 {
   struct cerebrod_node_data *nd;
 
@@ -660,12 +640,12 @@ _node_data_dump(void *x, void *arg)
 #endif /* CEREBRO_DEBUG */
 
 /*
- * _listener_data_list_dump
+ * _listener_data_dump
  *
  * Dump contents of node data list
  */
 static void
-_listener_data_list_dump(void)
+_listener_data_dump(void)
 {
 #if CEREBRO_DEBUG
   if (!(conf.debug && conf.listen_debug))
@@ -676,21 +656,21 @@ _listener_data_list_dump(void)
   fprintf(stderr, "**************************************\n");
   fprintf(stderr, "* Node Data List State\n");
   fprintf(stderr, "* -----------------------\n");
-  fprintf(stderr, "* Nodes: %d\n", listener_data_index_numnodes);
+  fprintf(stderr, "* Nodes: %d\n", listener_data_numnodes);
   fprintf(stderr, "* -----------------------\n");
-  if (listener_data_index_numnodes > 0)
+  if (listener_data_numnodes > 0)
     {
       int num;
       
-      num = List_for_each(listener_data_list, _node_data_dump, NULL);
-      if (num != listener_data_index_numnodes)
+      num = Hash_for_each(listener_data, _node_data_dump, NULL);
+      if (num != listener_data_numnodes)
         {
           fprintf(stderr, "* invalid dump count: num=%d numnodes=%d",
-                  num, listener_data_index_numnodes);
+                  num, listener_data_numnodes);
         }
     }
   else
-    fprintf(stderr, "_listener_data_list_dump: empty list\n");
+    fprintf(stderr, "_listener_data_dump: empty list\n");
   fprintf(stderr, "**************************************\n");
   Pthread_mutex_unlock(&debug_output_mutex);
   Pthread_mutex_unlock(&listener_data_lock);
@@ -718,15 +698,15 @@ _metric_name_output(void *data, const void *key, void *arg)
 #endif /* CEREBRO_DEBUG */
 
 /*
- * _metric_names_index_dump
+ * _metric_names_dump
  *
  * Dump contents of the metric name list
  */
 static void
-_metric_names_index_dump(void)
+_metric_names_dump(void)
 {
 #if CEREBRO_DEBUG
-  if (!(conf.debug && conf.listen_debug && metric_names_index))
+  if (!(conf.debug && conf.listen_debug && metric_names))
     return;
 
   Pthread_mutex_lock(&metric_names_lock);
@@ -734,7 +714,7 @@ _metric_names_index_dump(void)
   fprintf(stderr, "**************************************\n");
   fprintf(stderr, "* Metric Name List\n");
   fprintf(stderr, "* -----------------------\n");
-  Hash_for_each(metric_names_index, _metric_name_output, NULL);
+  Hash_for_each(metric_names, _metric_name_output, NULL);
   fprintf(stderr, "**************************************\n");
   Pthread_mutex_unlock(&debug_output_mutex);
   Pthread_mutex_unlock(&metric_names_lock);
@@ -760,8 +740,8 @@ _metric_data_update(struct cerebrod_node_data *nd,
   
   assert(nd && metric_name && hd);
 
-  /* If metric server isn't running, metric_names_index is NULL */
-  if (!metric_names_index)
+  /* If metric server isn't running, metric_names is NULL */
+  if (!metric_names)
     return;
 
   assert(nd->metric_data);
@@ -774,19 +754,36 @@ _metric_data_update(struct cerebrod_node_data *nd,
 #endif /* CEREBRO_DEBUG */
   
   Pthread_mutex_lock(&metric_names_lock);
-  if (!Hash_find(metric_names_index, metric_name))
+  if (!Hash_find(metric_names, metric_name))
     {
       struct cerebrod_metric_name_data *mnd;
+      
+      /* Re-hash if our hash is getting too small */
+      if ((metric_names_count + 1) > (metric_names_size*2))
+	cerebrod_rehash(&metric_names,
+			&metric_names_size,
+			LISTENER_DATA_METRIC_NAMES_INCREMENT,
+			metric_names_count,
+			&metric_names_lock);
       
       mnd = metric_name_data_create(metric_name,
                                     CEREBROD_METRIC_LISTENER_ORIGIN_MONITORED);
       
-      Hash_insert(metric_names_index, mnd->metric_name, mnd);
+      Hash_insert(metric_names, mnd->metric_name, mnd);
+      metric_names_count++;
     }
   Pthread_mutex_unlock(&metric_names_lock);             
-
+  
   if (!(md = Hash_find(nd->metric_data, metric_name)))
     {
+      /* Re-hash if our hash is getting too small */
+      if ((nd->metric_data_count + 1) > (nd->metric_data_size*2))
+	cerebrod_rehash(&nd->metric_data,
+			&nd->metric_data_size,
+			LISTENER_DATA_METRIC_DATA_INCREMENT,
+			nd->metric_data_count,
+			&nd->node_data_lock);
+
       md = metric_data_create(metric_name);
       Hash_insert(nd->metric_data, md->metric_name, md);
       nd->metric_data_count++;
@@ -881,24 +878,23 @@ cerebrod_listener_data_update(char *nodename,
   if (!listener_data_init)
     CEREBRO_EXIT(("initialization not complete"));
 
-  if (!listener_data_list || !listener_data_index)
+  if (!listener_data)
     CEREBRO_EXIT(("initialization not complete"));
 
   Pthread_mutex_lock(&listener_data_lock);
-  if (!(nd = Hash_find(listener_data_index, nodename)))
+  if (!(nd = Hash_find(listener_data, nodename)))
     {
       /* Re-hash if our hash is getting too small */
-      if ((listener_data_index_numnodes + 1) > LISTENER_DATA_INDEX_SIZE_LIMIT)
-	cerebrod_rehash(&listener_data_index,
-			&listener_data_index_size,
-			LISTENER_DATA_INDEX_SIZE_INCREMENT,
-			listener_data_index_numnodes,
+      if ((listener_data_numnodes + 1) > (listener_data_size*2))
+	cerebrod_rehash(&listener_data,
+			&listener_data_size,
+			LISTENER_DATA_SIZE_INCREMENT,
+			listener_data_numnodes,
 			&listener_data_lock);
 
       nd = _cerebrod_node_data_create_and_init(nodename);
-      List_append(listener_data_list, nd);
-      Hash_insert(listener_data_index, nd->nodename, nd);
-      listener_data_index_numnodes++;
+      Hash_insert(listener_data, nd->nodename, nd);
+      listener_data_numnodes++;
 
       /* Ok to call debug output function, since
        * listener_data_lock is locked.
@@ -943,8 +939,8 @@ cerebrod_listener_data_update(char *nodename,
   if (update_output_flag)
     _output_node_data_update(nd);
 
-  _listener_data_list_dump();
-  _metric_names_index_dump();
+  _listener_data_dump();
+  _metric_names_dump();
 }
 
 #endif /* !WITH_CEREBROD_SPEAKER_ONLY */
